03-advanced/03-security/serviceaccount.yaml
# Pod usando el ServiceAccount
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-sa
spec:
  serviceAccountName: app-service-account
  containers:
  - name: app
    image: nginx:alpine
